--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Rubik's Cube Timer",
-    "description": "This extension allows you to record and manage your cube records",
-    "version": "0.1",
+    "description": "This app allows you to record and manage your cube records",
+    "version": "0.1.1",
     "manifest_version": 2,
 
     "app": {
