--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.1",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-compress": "^0.14.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "^0.10.0",
