Chg: Migrate towards Electron
First steps towards Electron, uses require to load dependencies.

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "cube-timer",
   "version": "0.9.0",
+  "repository": "github:resamsel/cube-timer",
+  "license": "GPL-2.0",
   "dependencies": {
     "chartist": "^0.9.7",
     "jquery": "^2.2.1",
     "jquery-migrate": "^1.4.0",
-    "materialize-css": "^0.97.5"
+    "materialize-css": "^0.97.5",
+    "timer-stopwatch": "^0.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-compress": "^1.1.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
