Fix: Re-enable navbar game changing
Navbar has been moved to the left side for all screen widths. Cloning and adapting the game-list is not needed any longer.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "GPL-2.0",
   "dependencies": {
     "chartist": "^0.9.7",
+    "dateformat": "^1.0.12",
+    "human-date": "^1.4.0",
     "jquery": "^2.2.1",
     "jquery-migrate": "^1.4.0",
     "materialize-css": "^0.97.5",
