--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "repository": "github:resamsel/cube-timer",
   "license": "GPL-2.0",
   "dependencies": {
-    "chartist": "^0.9.7",
+    "chartist": "^0.9.8",
     "dateformat": "^1.0.12",
     "human-date": "^1.4.0",
-    "jquery": "^2.2.1",
-    "jquery-migrate": "^1.4.0",
-    "materialize-css": "^0.97.5",
+    "jquery": "^2.2.4",
+    "jquery-migrate": "^1.4.1",
+    "materialize-css": "^0.97.8",
+    "nprogress": "^0.2.0",
     "timer-stopwatch": "^0.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-compress": "^1.1.0",
-    "grunt-contrib-concat": "^1.0.0",
+    "grunt-browserify": "^5.2.0",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-downloadfile": "^0.3.2"
   }
