Fix: Fix duplication of scores

--- a/src/js/modules/core.template.js.sample
+++ b/src/js/modules/core.template.js.sample
@@ -1,4 +1,6 @@
-Core.register(
+var core = require('../core.js');
+
+core.register(
     'Template',
     function(sandbox) {
         var module = {};
