--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,8 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "firebase-admin": "~5.4.0",
-    "firebase-functions": "^0.7.0"
+    "firebase-functions": "^0.7.0",
+    "firebase-key-encode": "^0.1.5"
   },
   "private": true
 }
