--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.2.1",
     "jquery-migrate": "^3.0.1",
     "materialize-css": "^0.100.2",
+    "moment": "^2.19.1",
     "nprogress": "^0.2.0",
     "timer-stopwatch": "^0.2.0"
   },
