--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
   "name": "cube-timer",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "repository": "github:resamsel/cube-timer",
-  "license": "GPL-2.0",
+  "license": "GPL-3.0",
+  "scripts": {
+    "start": "webpack-dev-server --open --port 5000 --config ./webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "watch": "webpack --config webpack.dev.js --watch"
+  },
+  "author": "René Panzar",
   "dependencies": {
+    "@firebase/app": "^0.1.1",
+    "@firebase/auth": "^0.1.1",
+    "@firebase/firestore": "^0.1.1",
     "chartist": "^0.11.0",
+    "chartist-plugin-legend": "^0.6.2",
     "dateformat": "^3.0.2",
+    "googleapis": "^22.2.0",
     "human-date": "^1.4.0",
     "jquery": "^3.2.1",
-    "jquery-migrate": "^3.0.1",
     "materialize-css": "^0.100.2",
     "moment": "^2.19.1",
     "nprogress": "^0.2.0",
     "timer-stopwatch": "^0.2.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.2.0",
-    "grunt-contrib-compress": "^1.4.3",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.1.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-downloadfile": "^0.3.2"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "firebase-tools": "^3.13.1",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "i18n-webpack-plugin": "^1.0.0",
+    "jshint-loader": "^0.8.4",
+    "materialize-loader": "^2.0.2",
+    "reflect-metadata": "^0.1.10",
+    "scriptjs": "^2.5.8",
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.0"
   }
 }
