--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "materialize-css": "^0.100.2",
     "moment": "^2.19.1",
     "nprogress": "^0.2.0",
-    "timer-stopwatch": "^0.2.0"
+    "timer-stopwatch": "^0.2.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
+    "debounce-decorator": "^1.0.6",
     "file-loader": "^1.1.5",
     "firebase-tools": "^3.13.1",
     "html-loader": "^0.5.1",
