Adaptations for new data model

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "resamsel-cube-timer",
-    "staging": "resamsel-cube-timer"
+    "prod": "resamsel-cube-timer",
+    "dev": "resamsel-cube-timer-dev"
   }
 }
